--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-asset": "latest",
     "expo-web-browser": "latest",
     "firebase": "^6.6.1",
+    "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
@@ -25,7 +26,9 @@
     "react-navigation": "^4.0.5",
     "react-navigation-drawer": "^2.2.1",
     "react-navigation-stack": "^1.8.0",
-    "react-navigation-tabs": "^2.5.3"
+    "react-navigation-tabs": "^2.5.3",
+    "prop-types": "latest",
+    "lodash": "latest"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
