--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
     "expo-asset": "latest",
     "expo-web-browser": "latest",
     "firebase": "^6.6.1",
+    "lodash": "latest",
     "native-base": "^2.13.8",
+    "prop-types": "latest",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-pose": "^0.9.1",
+    "react-native-really-awesome-button": "^1.4.2",
     "react-native-reanimated": "^1.1.0",
     "react-native-screens": "^1.0.0-alpha.22",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.5",
     "react-navigation-drawer": "^2.2.1",
     "react-navigation-stack": "^1.8.0",
-    "react-navigation-tabs": "^2.5.3",
-    "prop-types": "latest",
-    "lodash": "latest"
+    "react-navigation-tabs": "^2.5.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
