--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-auto-grow-textinput": "^1.2.1",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-pose": "^0.9.1",
     "react-native-really-awesome-button": "^1.4.2",
     "react-native-reanimated": "^1.1.0",
     "react-native-screens": "^1.0.0-alpha.22",
+    "react-native-square-in-app-payments": "^1.2.3",
+    "react-native-textinput-effects": "^0.5.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.5",
     "react-navigation-drawer": "^2.2.1",
